[package]
name = "rls-blacklist"
version = "0.1.0"
authors = ["Nick Cameron <ncameron@mozilla.com>"]
description = "Blacklist of crates for the RLS to skip"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang-nursery/rls-blacklist"
categories = ["development-tools"]

[dependencies]
